log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: vsinerva/log_output@sha256:ad6637bc27d9682e80cf4ccdca3129cda7aa70ca2d500131698694b3d568fbf7
